Fix CreateDepartmentCommandValidator as per CI
